--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jimp": "^0.22.12",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "pg": "^8.11.5",
-    "sqlite3": "^5.1.7",
-    "jimp": "^0.22.12"
+    "sqlite3": "^5.1.7"
   }
 }
